# asRP-python

./: .env.catalog-api.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: catalog-api-ci.yml
apps/asrp-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/asrp-frontend/src/: App.tsx  main.tsx
backups/keycloak/: keycloak_db_20260121_180420.sql  keycloak_db_20260121_183132.sql
backups/keycloak/realm_export/: asrp-realm.json  asrp-users-0.json
compose/: docker-compose.local.yml  docker-compose.prod.yml  docker-compose.prodlike.local.yml  docker-compose.stage.yml
docs/: README.md
docs/architecture/: diagram.mmd  overview.md
docs/checkpoints/: checkpoint-p2-hardening.md  checkpoint-p3-observability.md  checkpoint-p4-compose-prodlike.md  checkpoint-p5-k8s-local-enterprise.md
docs/observability/: correlation-id.md  logging.md  runbook-debug.md
docs/runbooks/: auth-smoke.md  k8s-local-install-and-backup.md  runbook-dev-start-stop.md
docs/security/: oidc-keycloak.md  rbac.md
k8s/apps/base/: hpa-api-gateway.yaml  hpa-catalog-api.yaml  hpa-orders-api.yaml  kustomization.yaml  namespace.yaml  networkpolicy-allow-apis-egress.yaml  networkpolicy-allow-apis-ingress-from-gateway.yaml  networkpolicy-allow-db-ingress.yaml  networkpolicy-allow-dns.yaml  networkpolicy-allow-gateway-egress.yaml  networkpolicy-allow-ingress-from-ingress-nginx.yaml  networkpolicy-default-deny.yaml
k8s/apps/base/api-gateway/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/apps/base/catalog-api/: configmap.yaml  db-service.yaml  db-statefulset.yaml  deployment.yaml  service.yaml
k8s/apps/base/frontend/: deployment.yaml  ingress.yaml  service.yaml
k8s/apps/base/keycloak/: deployment.yaml  ingress.yaml  service.yaml
k8s/apps/base/orders-api/: configmap.yaml  db-service.yaml  db-statefulset.yaml  deployment.yaml  service.yaml
k8s/cluster/: kind-config.yaml
k8s/infra/cert-manager/: cluster-issuer-selfsigned.yaml
scripts/: asrp-compose-prodlike.sh  asrp-ready.sh  smoke-auth.sh  smoke_RBAK_no_orders-api.sh
services/api-gateway/: Dockerfile  package-lock.json  package.json
services/api-gateway/src/: index.ts
services/catalog-api/: Dockerfile  README.md  pyproject.toml
services/catalog-api/alembic/: env.py
services/catalog-api/alembic/versions/: d331ba3ad091_create_products_table.py
services/catalog-api/app/: main.py  models.py  repositories.py  schemas.py
services/catalog-api/app/api/v1/: routes.py
services/catalog-api/app/core/: auth.py  config.py  db.py  deps.py  logging.py  security.py
services/catalog-api/app/middlewares/: __init__.py  request_id.py
services/catalog-api/tests/: conftest.py  test_health.py  test_ping.py  test_products_auth.py  test_products_integration.py  test_routes.py
services/identity-api/: pyproject.toml
services/identity-api/app/: main.py
services/identity-api/app/api/v1/: routes.py
services/identity-api/app/core/: config.py
services/identity-api/tests/: test_ping.py
services/orders-api/: .env.orders-api.example  Dockerfile  README.md  package-lock.json  pyproject.toml
services/orders-api/app/: main.py
services/orders-api/app/api/: routes.py
services/orders-api/app/core/: config.py  logging.py
services/orders-api/app/middlewares/: request_id.py
services/orders-api/app/routers/: health.py
services/orders-api/app/security/: deps.py  oidc.py
services/orders-api/tests/: test_healh.py
(+2 files in other folders)
