[project]
name = "identity-api"
version = "0.1.0"
description = "Identity API"
authors = [
    {name = "José Alberto Ayra",email = "jalbertoayra@outlook.es"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.10,<0.15.0)"
]

[tool.poetry]
name = "identity-api"
version = "0.1.0"
description = "Identity API"
authors = []
packages = [{ include = "app" }]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
